--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
     <script type="text/javascript" charset="utf-8" src="appframework/appframework.ui.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
-    <script type="text/javascript" src="js/CustomFunctions.js"></script>
+<!--    <script type="text/javascript" src="js/CustomFunctions.js"></script>-->
     <script type="text/javascript" src="js/jquery.signalR-2.1.2.js"></script>
 
   
@@ -27,8 +27,8 @@
     <script src="cordova.js"></script>
     <!-- phantom library, needed for XDK "legacy" container CORS -->
     <script src="xhr.js"></script>
-
-    <script type="text/javascript" charset="utf-8" src="js/index.js"></script>
+    <script data-main="Indexapp" src="js/require.js"></script>
+    <!--<script type="text/javascript" charset="utf-8" src="js/index.js"></script>-->
     <script>
         //function signUp() {
 
@@ -80,6 +80,7 @@
                     <br>
                     <p>Register</p>
                     <br>
+                    <div id="Info"></div>
                     <br>
                 </div>
                 <input name="name" id="name" type="text" placeholder="Name" />
