--- a/platforms/android/assets/www/room.html
+++ b/platforms/android/assets/www/room.html
@@ -20,7 +20,7 @@
 
     <script type="text/javascript" src="js/jquery.signalR-2.1.2.js"></script>
 
-    <script type="text/javascript" src="http://bathindavarinder-001-site1.smarterasp.net/signalR/hubs"></script>
+    <script type="text/javascript" src="http://bathindavarinder-001-site1.smarterasp.net/signalr/hubs"></script>
 
 
     <script type="text/javascript" charset="utf-8" src="js/handlebars-v2.0.0.js"></script>
