--- a/platforms/android/assets/www/rooms.html
+++ b/platforms/android/assets/www/rooms.html
@@ -16,22 +16,16 @@
     <script type="text/javascript" charset="utf-8" src="appframework/appframework.ui.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
-    <!--<script type="text/javascript" src="js/jquery.signalR-2.1.2.js"></script>-->
+    <script type="text/javascript" src="js/jquery.signalR-2.1.2.js"></script> 
 
-    <script src="signalr/hubs" type="text/javascript"></script>
+    <script type="text/javascript" src="http://bathindavarinder-001-site1.smarterasp.net/signalr/hubs"></script>
 
-
-    <!--<script type="text/javascript" charset="utf-8" src="js/signalRHub.js"></script>-->
-
-    <!--AppFramework plugin for sliding side menu-->
-    <script type="text/javascript" charset="utf-8" src="appframework/plugins/af.slidemenu.js"></script>
+    
 
    
     <!-- phantom library, needed for Cordova api calls -->
     <script src="cordova.js"></script>
-   
-   <script type="text/javascript" charset="utf-8" src="js/rooms.js"></script>
-    
+    <script data-main="RoomsApp" src="js/require.js"></script>
 </head>
 <body>
     <div id="afui">
