--- a/WebApplication1/WebApplication1 - Copy/WebApplication1/rooms.html
+++ b/WebApplication1/WebApplication1 - Copy/WebApplication1/rooms.html
@@ -6,31 +6,36 @@
     This template can be used for simple app with left side menu that can be opened to switch views, for applications like Youtube App or Gmail app.
 -->
 
-    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0;" />
+    <link rel="stylesheet" href="jquery.mobile.structure-1.0.1.css" />
+	<link rel="apple-touch-icon" href="images/launch_icon_57.png" />
+	<link rel="apple-touch-icon" sizes="72x72" href="images/launch_icon_72.png" />
+	<link rel="apple-touch-icon" sizes="114x114" href="images/launch_icon_114.png" />
+	<link rel="stylesheet" href="jquery.mobile-1.0.1.css" />
+	<link rel="stylesheet" href="custom.css" />
+	<script src="js/jquery-1.7.1.min.js"></script>
+	<script src="js/jquery.mobile-1.0.1.min.js"></script>
+
+    
 
     <link rel="stylesheet" type="text/css" href="appframework/af.ui.css" />
     <link rel="stylesheet" type="text/css" href="appframework/icons.css" />
 
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+   <!-- <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="appframework/jq.appframework.js"></script>
     <script type="text/javascript" charset="utf-8" src="appframework/appframework.ui.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>-->
 
       <script type="text/javascript" src="Scripts/jquery.signalR-2.1.2.js"></script>
         <script src="signalr/hubs" type="text/javascript"></script>
      
 
-    <!--AppFramework plugin for sliding side menu-->
-    <script type="text/javascript" charset="utf-8" src="appframework/plugins/af.slidemenu.js"></script>
-
-    <!-- phantom library, needed for XDK "legacy" container api calls -->
+<!--    <!--AppFramework plugin for sliding side menu-->
+    <script type="text/javascript" charset="utf-8" src="appframework/plugins/af.slidemenu.js"></script>-->
+ 
     <script src="intelxdk.js"></script>
-    <!-- phantom library, needed for Cordova api calls -->
-    <script src="cordova.js"></script>
-    <!-- phantom library, needed for XDK "legacy" container CORS -->
-    <script src="xhr.js"></script>
-    <!--<script type="text/javascript" src="Scripts/CustomFunctions.js"></script>
-    <script type="text/javascript" charset="utf-8" src="Scripts/rooms.js"></script>-->
+   
+    <script src="cordova.js"></script> 
+    <script src="xhr.js"></script> 
       <script data-main="RoomsApp" src="Scripts/require.js"></script>
 </head>
 <body>
