--- a/platforms/android/assets/www/rooms.html
+++ b/platforms/android/assets/www/rooms.html
@@ -8,13 +8,24 @@
 
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0;" />
 
-    <link rel="stylesheet" type="text/css" href="appframework/af.ui.css" />
-    <link rel="stylesheet" type="text/css" href="appframework/icons.css" />
 
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script> 
+    
+    <link rel="stylesheet" href="css/jquery.mobile.structure-1.0.1.css" />
+	<link rel="apple-touch-icon" href="images/launch_icon_57.png" />
+	<link rel="apple-touch-icon" sizes="72x72" href="images/launch_icon_72.png" />
+	<link rel="apple-touch-icon" sizes="114x114" href="images/launch_icon_114.png" />
+	<link rel="stylesheet" href="css/jquery.mobile-1.0.1.css" />
+	<link rel="stylesheet" href="css/customres.css" />
+	<script src="js/jquery-1.7.1.min.js"></script>
+	<script src="js/jquery.mobile-1.0.1.min.js"></script>
+<!--
+    <link rel="stylesheet" type="text/css" href="appframework/af.ui.css" />
+    <link rel="stylesheet" type="text/css" href="appframework/icons.css" />-->
+
+ <!--   <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script> 
     <script type="text/javascript" charset="utf-8" src="appframework/jq.appframework.js"></script>
     <script type="text/javascript" charset="utf-8" src="appframework/appframework.ui.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>-->
 
     <script type="text/javascript" src="js/jquery.signalR-2.1.2.js"></script> 
 
@@ -22,16 +33,64 @@
 
     
 
+
+
    
     <!-- phantom library, needed for Cordova api calls -->
     <script src="cordova.js"></script>
     <script data-main="RoomsApp" src="js/require.js"></script>
 </head>
 <body>
-    <div id="afui">
+
+    <div data-role="page" id="home" data-theme="c">
+
+        <div data-role="content">
+
+            <div id="branding">
+                <h1>Rooms </h1>
+            </div>
+
+            <div class="choice_list panel" title="Rooms" id="listview" data-footer="none">
+                <h1>What would you'd like to join? </h1>
+
+                <ul data-role="listview" data-inset="true"  class="list">
+                    <li><a href="#" data-transition="slidedown">
+                        <img src="sushis.jpg" />
+                        <h3>Punjab</h3>
+                    </a></li>
+                    <li><a href="#" data-transition="slidedown">
+                        <img src="pizza.jpg" />
+                        <h3>Haryana</h3>
+                    </a></li>
+                    <li><a href="#" data-transition="slidedown">
+                        <img src="kebap.jpg" />
+                        <h3>Delhi</h3>
+                    </a></li>
+                    <li><a href="#" data-transition="slidedown">
+                        <img src="burger.jpg" />
+                        <h3>Chandigarh</h3>
+                    </a></li>
+                    <li><a href="#" data-transition="slidedown">
+                        <img src="nems.jpg" />
+                        <h3>Mumbai</h3>
+                    </a></li>
+                    <li><a href="#" data-transition="slidedown">
+                        <img src="tradi.jpg" />
+                        <h3>Pune</h3>
+                    </a></li>
+                </ul>
+
+            </div>
+        </div>
+
+    </div>
+    <!-- /page -->
+</body>
+
+<!--    <div id="afui">
         <div id="content" style="">
 
-            <!--List View Page-->
+            <!--List View Pag
               <div class="panel" title="Rooms" id="listview" data-footer="none"> 
                 <ul class="list"> 
                     <li><a href="#" id="Punjab">Punjab</a></li>
@@ -45,5 +104,5 @@
             </div>
         </div>
     </div>
-</body>
+</body>-->
 </html>
