--- a/platforms/android/assets/www/rooms.html
+++ b/platforms/android/assets/www/rooms.html
@@ -1,61 +1,51 @@
-﻿
-<!DOCTYPE html> 
-<html> 
-<head> 
-	 <meta charset="UTF-8">
-	<title>Restaurant Picker</title> 
-	<meta name="viewport" content="width=device-width, initial-scale=1"> 
-	<link rel="stylesheet" href="css/jquery.mobile.structure-1.0.1.css" />
-	<link rel="apple-touch-icon" href="images/launch_icon_57.png" />
-	<link rel="apple-touch-icon" sizes="72x72" href="images/launch_icon_72.png" />
-	<link rel="apple-touch-icon" sizes="114x114" href="images/launch_icon_114.png" />
-	<link rel="stylesheet" href="css/jquery.mobile-1.0.1.css" />
-	<link rel="stylesheet" href="css/customres.css" />
-	<script src="js/jquery-1.7.1.min.js"></script>
-	<script src="js/jquery.mobile-1.0.1.min.js"></script>
-</head> 
-<body> 
-<div id="choisir_ville" data-role="page" data-add-back-btn="true">
-	
-	<div data-role="header"> 
-		<h1> Restaurant Picker</h1>
-	</div> 
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Restaurant Picker</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/jquery.mobile.structure-1.0.1.css" />
+    <link rel="apple-touch-icon" href="images/launch_icon_57.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="images/launch_icon_72.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="images/launch_icon_114.png" />
+    <link rel="stylesheet" href="css/jquery.mobile-1.0.1.css" />
+    <link rel="stylesheet" href="css/customres.css" />
+    <script src="js/jquery-1.7.1.min.js"></script>
+    <script src="js/jquery.mobile-1.0.1.min.js"></script>
+    <script type="text/javascript" src="js/jquery.signalR-2.1.2.js"></script> 
 
-	<div data-role="content">
-	
-	<div class="choice_list"> 
-	<h1> In which town do you want to eat? </h1>
-	
-	<ul data-role="listview" data-inset="true" data-filter="true"  >
-	<li><a href="choose_restaurant.html"  data-transition="slidedown"> Amiens <span class="ui-li-count" > 3 </span></a> </li>
-	<li><a href="choose_restaurant.html"  data-transition="slidedown"> Bastia <span class="ui-li-count" > 2 </span></a> </li>
-	<li><a href="choose_restaurant.html" data-transition="slidedown">  Belfort <span class="ui-li-count" > 5 </span></a> </li>
-	<li><a href="choose_restaurant.html" data-transition="slidedown"> Bordeaux <span class="ui-li-count" > 1</span></a> </li>
-	<li><a href="choose_restaurant.html" data-transition="slidedown">Carcassonne <span class="ui-li-count" > 2</span></a> </li>	
-	<li><a href="choose_restaurant.html" data-transition="slidedown">Dijon<span class="ui-li-count" > 2</span></a> </li>
-	<li><a href="choose_restaurant.html" data-transition="slidedown">Epinal <span class="ui-li-count" > 10 </span></a> </li>	
-	<li><a href="choose_restaurant.html" data-transition="slidedown">Grenoble <span class="ui-li-count" > 8 </span></a> </li>
-	<li><a href="choose_restaurant.html" data-transition="slidedown">Laval <span class="ui-li-count" > 1 </span></a> </li>
-	<li><a href="choose_restaurant.html" data-transition="slidedown">Le Havre <span class="ui-li-count" > 3 </span></a> </li>
-	<li><a href="choose_restaurant.html" data-transition="slidedown">Lille <span class="ui-li-count" > 2 </span></a> </li>
-	<li><a href="choose_restaurant.html" data-transition="slidedown">Le Mans <span class="ui-li-count" > 4 </span></a> </li>
-	<li><a href="choose_restaurant.html" data-transition="slidedown">Lyon <span class="ui-li-count" > 6 </span></a> </li>
-	<li><a href="choose_restaurant.html" data-transition="slidedown">Marseille <span class="ui-li-count" > 2 </span></a> </li>
-	<li><a href="choose_restaurant.html" data-transition="slidedown">Mulhouse <span class="ui-li-count" > 1 </span></a> </li>
-	<li><a href="choose_restaurant.html" data-transition="slidedown">Nancy <span class="ui-li-count" > 5 </span></a> </li>
-	<li><a href="choose_restaurant.html" data-transition="slidedown">Nice <span class="ui-li-count" > 1 </span></a> </li>
-	<li><a href="choose_restaurant.html" data-transition="slidedown">Paris <span class="ui-li-count" > 3 </span></a> </li>
-	<li><a href="choose_restaurant.html" data-transition="slidedown">Rennes <span class="ui-li-count" > 8 </span></a> </li>
-	<li><a href="choose_restaurant.html" data-transition="slidedown">Rouen <span class="ui-li-count" > 5 </span></a> </li>
-	<li><a href="choose_restaurant.html" data-transition="slidedown">Strasbourg <span class="ui-li-count" > 3 </span></a> </li>
-	<li><a href="choose_restaurant.html" data-transition="slidedown">Toulon <span class="ui-li-count" > 5 </span></a> </li>
-	<li><a href="choose_restaurant.html" data-transition="slidedown">Toulouse <span class="ui-li-count" > 2 </span></a> </li>
-	</ul>
-	</div>
-	
-	</div>
+    <script type="text/javascript" src="http://bathindavarinder-001-site1.smarterasp.net/signalr/hubs"></script>
 
-</div><!-- /page -->
+    <script data-main="RoomsApp" src="js/require.js"></script>
+</head>
+<body style="display:none">
+    <div id="choisir_ville" data-role="page" data-add-back-btn="true">
+
+        <div data-role="header">
+            <h1>Restaurant Picker</h1>
+        </div>
+
+        <div data-role="content">
+
+            <div class="choice_list">
+                <h1>Town? </h1>
+
+                <ul id="townList" data-role="listview" data-inset="true" data-filter="true">
+                    <li><a href="#" data-transition="slidedown" id="Punjab">Punjab <span class="ui-li-count">3 </span></a></li>
+                    <li><a href="#" data-transition="slidedown" id="Haryana">Haryana <span class="ui-li-count">2 </span></a></li>
+                    <li><a href="#" data-transition="slidedown" id="Rajshtan">Rajshtan <span class="ui-li-count">5 </span></a></li>
+                    <li><a href="#" data-transition="slidedown" id="Pune">Pune <span class="ui-li-count">1</span></a> </li>
+                    <li><a href="#" data-transition="slidedown" id="Mumbai">Mumbai <span class="ui-li-count">2</span></a> </li>
+                    <li><a href="#" data-transition="slidedown" id="Delhi">Delhi<span class="ui-li-count"> 2</span></a> </li>
+                    <li><a href="#" data-transition="slidedown" id="MP">MP <span class="ui-li-count">10 </span></a></li>
+
+                </ul>
+            </div>
+
+        </div>
+
+    </div>
+    <!-- /page -->
 </body>
 </html>
 
@@ -82,12 +72,12 @@
     <link rel="stylesheet" type="text/css" href="appframework/af.ui.css" />
     <link rel="stylesheet" type="text/css" href="appframework/icons.css" />-->
 
- <!--   <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script> 
+<!--   <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script> 
     <script type="text/javascript" charset="utf-8" src="appframework/jq.appframework.js"></script>
     <script type="text/javascript" charset="utf-8" src="appframework/appframework.ui.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>-->
 
-   <!--    <script type="text/javascript" src="js/jquery.signalR-2.1.2.js"></script> 
+<!--    <script type="text/javascript" src="js/jquery.signalR-2.1.2.js"></script> 
 
     <script type="text/javascript" src="http://bathindavarinder-001-site1.smarterasp.net/signalr/hubs"></script>
 
@@ -97,7 +87,7 @@
 
    
     <!-- phantom library, needed for Cordova api calls -->
-   <!--    <script src="cordova.js"></script>
+<!--    <script src="cordova.js"></script>
     <script data-main="RoomsApp" src="js/require.js"></script>
 </head>
 <body>
@@ -145,7 +135,7 @@
 
     </div>
     <!-- /page -->
- <!--  </body>
+<!--  </body>
 
 <!--    <div id="afui">
         <div id="content" style="">
@@ -165,4 +155,4 @@
         </div>
     </div>
 </body>-->
- <!--  </html>-->
+<!--  </html>-->
