--- a/WebApplication1/WebApplication1 - Copy/WebApplication1/bhabo.html
+++ b/WebApplication1/WebApplication1 - Copy/WebApplication1/bhabo.html
@@ -81,6 +81,8 @@
      <script type='application/javascript' src='Scripts/fastclick.js'></script>
     <script type="text/javascript" src="Scripts/jquery.signalR-2.1.2.js"></script>
 
+    <script type="text/javascript" src="Scripts/jquery.timer.js"></script>
+
 
     <script src="signalr/hubs" type="text/javascript"></script>
 
