--- a/platforms/android/assets/www/rooms.html
+++ b/platforms/android/assets/www/rooms.html
@@ -13,7 +13,7 @@
     <script src="js/jquery-1.7.1.min.js"></script>
     <script src="js/jquery.mobile-1.0.1.min.js"></script>
     <script type="text/javascript" src="js/jquery.signalR-2.1.2.js"></script> 
-
+     <script type='application/javascript' src='js/fastclick.js'></script>
     <script type="text/javascript" src="http://bathindavarinder-001-site1.smarterasp.net/signalr/hubs"></script>
 
     <script data-main="RoomsApp" src="js/require.js"></script>
