--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -12,11 +12,11 @@
 
 
 
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="js/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="appframework/jq.appframework.js"></script>
     <script type="text/javascript" charset="utf-8" src="appframework/appframework.ui.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-
+    <script src="js/jquery.mobile-1.4.5.min.js"></script>
+    <script type='application/javascript' src='js/fastclick.js'></script>
     <!--    <script type="text/javascript" src="js/CustomFunctions.js"></script>-->
     <script type="text/javascript" src="js/jquery.signalR-2.1.2.js"></script>
 
@@ -27,13 +27,11 @@
 
     <script src="xhr.js"></script>
     <script data-main="Indexapp" src="js/require.js"></script>
-    <script>
-      
- 
+    <link rel="stylesheet" type="text/css" href="css/custom.css" />
 
-    </script>
 </head>
-<body style="display:none">
+<body style="display: none">
+    <div id="loading"></div>
     <div id="afui">
 
         <div id="content" style="">
@@ -94,7 +92,6 @@
                 <ul class="list inset">
                     <li><a href="#changename" class="icon pencil" style="text-align: center">Change Name</a></li>
                     <li><a href="#" id="GoToRooms" class="icon pencil" style="text-align: center">Go To Rooms</a></li>
-                    <li><a href="#" id="GameRoom" class="icon pencil" style="text-align: center">Game Rom</a></li>
                 </ul>
             </div>
 
